--- a/index.html
+++ b/index.html
@@ -77,13 +77,11 @@
         <!-- About Me -->
         <section class="about-me" id="about">
             <h2 class="section__title section__title--about">Who I am</h2>
-            <p class="section__subtitle section__subtitle--about">Graph Maker - Good Eater</p>
+            <p class="section__subtitle section__subtitle--about">PhD Candidate</p>
             <div class ="about-me__body">
-                <p>Handsome man known for his good eating. 
-                    I have three dogs and they're all the best. 
-                    I am getting married in November and I'm super keen for that. 
-                    Should be tops. 
-                    If you've met Alice you'd know.
+                <p>PhD student in the Newcastle Cognition Lab under the supervision of Ami Eidels and Scott Brown.
+                    Waiting with fingers cross for a wedding in November!
+                    I have three dogs: a Labradoodle and two Sheepadoodles.
                 </p>
             </div>
 
@@ -114,6 +112,7 @@
 
         <!-- Footer -->
         <footer>
+            <p class="section__subtitle section__subtitle--intro">Contact:</p>
             <a href="mailtio:murray.bennett@uon.edu.au" class="footer-link">murray.bennett@uon.edu.au</a>
             <ul class="social-list">
                 <li class="social-list__item"><a class="social-list__link" href="https://twitter.com/MurraySBennett">Twitter</a></li>
