--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h2 class="section__title section__title--research">My Research</h2>
             <div class="research--projects">
                 <div class="research">
-                    <a href="./projects/dutchAuction2020.html"><h3 class="research__title">Competitive Decision Making</h3></a>
+                    <a href="./projects/dutchAuction/dutchAuction2020.html"><h3 class="research__title">Competitive Decision Making</h3></a>
                     <p>Examining decision performance under the pressure of competition.</p>
                 </div> <!-- close research-->
 
@@ -91,12 +91,12 @@
                 </div> <!-- close research-->
                 <div class="research">
                     <h3>Other Areas of Interest</h3>
-                    <p>To scratch that 'graph-making' itch. Includes related reserach areas as well as various hobby projects.</ p>
+                    <p>To scratch that 'graph-making' itch. Includes related research areas as well as various hobby projects.</p>
                 </div> <!-- close research-->                                
             </div> <!-- close all research projects-->
             
             <!-- <a href="#work" class="btn">My Work</a> -->
-            <a href="./projects/projectsOverview.html" class="btn">My Research Projects</a>
+            <a href="./projects/projectsOverview.html" class="btn">All Research Projects</a>
         </section>
 
 
@@ -107,7 +107,7 @@
 
             <div class="project">
                 <!-- project item 1 -->
-                <a href="./projects/dutchAuction2020.html" class="project__item">
+                <a href="./projects/dutchAuction/dutchAuction2020.html" class="project__item">
                     <!-- <img src="img/dutchAuction.jpg" alt="" class="project__img"> -->
                     <img src="https://raw.githubusercontent.com/MurraySBennett/Competitive-Decision-Making-in-Dutch-Auctions/master/Figures/Game%20Interface.png" alt="" class="project__img" title="Competitive decisions in Dutch Auctions">
                 </a>
