--- a/projects/projectsOverview.html
+++ b/projects/projectsOverview.html
@@ -52,7 +52,7 @@
             <h2 class="section__title section__title--research">My Research</h2>
             <div class="research--projects">
                 <div class="research">
-                    <a href="./projects/dutchAuction2020.html"><h3 class="research__title">Competitive Decision Making</h3></a>
+                    <a href="./dutchAuction/dutchAuction2020.html"><h3 class="research__title">Competitive Decision Making</h3></a>
                     <p>Examining decision performance under the pressure of competition.</p>
                 </div> <!-- close research-->
 
@@ -73,7 +73,7 @@
                 </div> <!-- close research-->
                 <div class="research">
                     <h3>Other Areas of Interest</h3>
-                    <p>To scratch that 'graph-making' itch. Includes related reserach areas as well as various hobby projects.</ p>
+                    <p>To scratch that 'graph-making' itch. Includes related research areas as well as various hobby projects.</p>
                 </div> <!-- close research-->                                
             </div> <!-- close all research projects-->
             
