--- a/projects/template.html
+++ b/projects/template.html
@@ -18,11 +18,10 @@
     
     <body>
         <header>
-            <div class="logo" id="pageTop">
-                <a href="https://newcastlecl.org">
-                    <img src="img/newcl_logo.png" alt="">
+            <div class="logo--home" id="pageTop">
+                <a href="../../index.html">
+                    <i class="fas fa-home"></i>
                 </a>
-                <!-- <i class="fas fa-brain"></i> -->
             </div>
             <button class="nav-toggle" aria-label="toggle navigation">
                 <span class="hamburger"></span>
