Update header name

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- Introduction -->
         <section class="intro" id="home">
             <h1 class="section__title section__title--intro"> <!-- double dash indicates that it will modify the attached class-->
-                <strong>Murray Bennett</strong>
+                <strong>Murray S. Bennett</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">University of Newcastle Cognition Lab</p>
             <img src="img/murray.png" alt="a picture of Murray smiling" class="intro__img">
